--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="./index.css">
+    <link rel="stylesheet" href="./responsive.css">
     <title>Document</title>
   </head>
 
